# tado-timescale

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  diesel.sh  docker-compose.yml  generate-schema.sh  tado-openapi.yml  transfer.py
.cargo/: config.toml
.github/workflows/: docker-image.yml
grafana/dashboards/: dashboards.yml  tado.json
grafana/datasources/: timescaledb.yml
migrations/001_create_core/: down.sql  up.sql
migrations/002_create_timeseries/: down.sql  up.sql
migrations/003_add_device_type_desc/: down.sql  up.sql
src/: client.rs  config.rs  main.rs  schema.rs  utils.rs
src/db/: models.rs  schema.rs
src/models/: tado.rs
src/services/: backfill.rs  fake_data.rs  ingest.rs  realtime.rs  refs.rs
tests/data/: day-report.json
