[package]
name = "tado-timescale"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
chrono = { version = "0.4.42", features = ["serde"] }
ureq = { version = "3.1.2", features = ["json", "gzip"] }
http = "1.3.1"
diesel = { version = "2.3.1", features = ["postgres", "chrono", "serde_json"] }
log = "0.4.28"
env_logger = "0.11.8"

# build optimization
[profile.release]
# https://nnethercote.github.io/perf-book/build-configuration.html#link-time-optimization
lto = "fat"
# https://nnethercote.github.io/perf-book/build-configuration.html#codegen-units
codegen-units = 1
# https://nnethercote.github.io/perf-book/build-configuration.html#abort-on-panic
panic = "abort"
# https://nnethercote.github.io/perf-book/build-configuration.html#strip-debug-info-and-symbols
strip = "symbols"
